--- a/src/app/lib/styles.module.css
+++ b/src/app/lib/styles.module.css
@@ -33,4 +33,19 @@
     top: 10px;
     right: 10px;
   }
+
+  .searchBarOpen {
+    width: 100%;
+    height: 100px;
+    overflow: hidden;
+    transition: all 0.4s ease-in-out;
+  }
+  
+  .searchBarClose {
+    width: 0;
+    height: 100px;
+    overflow: hidden;
+  }
+  
+  
       
